--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,7 @@
 {
   "restApiRoot": "/api",
   "host": "0.0.0.0",
-  "port": 3000,
+  "port": 8080,
   "remoting": {
     "context": false,
     "rest": {
@@ -11,11 +11,11 @@
     },
     "json": {
       "strict": false,
-      "limit": "100kb"
+      "limit": "5mb"
     },
     "urlencoded": {
       "extended": true,
-      "limit": "100kb"
+      "limit": "5mb"
     },
     "cors": false
   }
